# terraform-importer

./: .cursorrules  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  agent.md  main.py  manager.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: aws_resource_implementation.md  aws_resource_roadmap.md  bug_report.md  feature_request.md
terraform_importer/: cli.py  main.py  manager.py
terraform_importer/generators/: import_block_generator.py
terraform_importer/handlers/: json_config_handler.py  providers_handler.py  terraform_handler.py
terraform_importer/importer/: importer.py
terraform_importer/providers/: aws_auth.py  aws_provider.py  base_provider.py  bitbucket_provider.py  gcp_provider.py
terraform_importer/providers/aws/: __init__.py  aws_provider.py
terraform_importer/providers/aws/aws_services/: apigateway.py  cloudwatch.py  ec2.py  ecr.py  ecs.py  general.py  iam.py  lambda.py  lb.py  rds.py  s3.py  vpc.py
terraform_importer/providers/aws/tests/: __init__.py  test_apigateway.py  test_base.py  test_cloudwatch.py  test_ec2.py  test_ecr.py  test_ecs.py  test_general.py  test_iam.py  test_lambda.py  test_lb.py  test_rds.py  test_s3.py  test_vpc.py
terraform_importer/providers/aws_services/: aws_auth.py  base.py  cloudwatch.py  ec2.py  ecs.py  general.py  iam.py  lambda.py  lb.py  rds.py  s3.py  vpc.py
terraform_importer/providers/bitbucket/: __init__.py  bitbucket_provider.py
terraform_importer/providers/bitbucket/tests/: __init__.py
terraform_importer/providers/gcp/: __init__.py  gcp_provider.py
terraform_importer/providers/kubernetes/: README.md  __init__.py  kubernetes_provider.py
tests/: test_aws_provider.py  test_aws_service_ec2.py  test_bitbucket_provider.py  test_cli.py  test_import_block_generator.py  test_json_config_handler.py  test_providers_handler.py  test_terraform_handler.py
tests copy/: test_aws_provider.py  test_aws_service_ec2.py  test_import_block_generator.py
(+4 files in other folders)
