[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terraform-importer"
version = "2.0.0"
description = "A Python-based tool for analyzing Terraform configurations and generating resource import blocks dynamically"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "eyalya", email = "eyalyaish@gmail.com"}
]
keywords = ["terraform", "infrastructure", "import", "cloud", "aws", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "boto3>=1.26.0",
    "kubernetes>=24.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/eyalya/terraform-importer"
Documentation = "https://github.com/eyalya/terraform-importer#readme"
Repository = "https://github.com/eyalya/terraform-importer"
Issues = "https://github.com/eyalya/terraform-importer/issues"

[project.scripts]
terraform-importer = "terraform_importer.main:main"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "terraform_importer/providers/aws/tests",
    "terraform_importer/providers/kubernetes/tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["terraform_importer"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
